; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/modules/snmp_hostres/extr_hostres_device_tbl.c_device_get_status.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/bsnmpd/modules/snmp_hostres/extr_hostres_device_tbl.c_device_get_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.devinfo_dev = type { i32 }

@DS_DOWN = common dso_local global i32 0, align 4
@DS_RUNNING = common dso_local global i32 0, align 4
@DS_UNKNOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.devinfo_dev*)* @device_get_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @device_get_status(%struct.devinfo_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.devinfo_dev*, align 8
  store %struct.devinfo_dev* %0, %struct.devinfo_dev** %3, align 8
  %4 = load %struct.devinfo_dev*, %struct.devinfo_dev** %3, align 8
  %5 = icmp ne %struct.devinfo_dev* %4, null
  %6 = zext i1 %5 to i32
  %7 = call i32 @assert(i32 %6)
  %8 = load %struct.devinfo_dev*, %struct.devinfo_dev** %3, align 8
  %9 = getelementptr inbounds %struct.devinfo_dev, %struct.devinfo_dev* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %15 [
    i32 131, label %11
    i32 128, label %11
    i32 130, label %13
    i32 129, label %13
  ]

11:                                               ; preds = %1, %1
  %12 = load i32, i32* @DS_DOWN, align 4
  store i32 %12, i32* %2, align 4
  br label %17

13:                                               ; preds = %1, %1
  %14 = load i32, i32* @DS_RUNNING, align 4
  store i32 %14, i32* %2, align 4
  br label %17

15:                                               ; preds = %1
  %16 = load i32, i32* @DS_UNKNOWN, align 4
  store i32 %16, i32* %2, align 4
  br label %17

17:                                               ; preds = %15, %13, %11
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
